--- a/2-nginx.yaml
+++ b/2-nginx.yaml
@@ -1,5 +1,6 @@
 - name: install and start nginx
   hosts: frontend
+  become: yes
 
   tasks:
   - name: install nginx
@@ -12,7 +13,7 @@
       name: nginx
       state: started
       enabled: yes
-      
+
 
 
 
