--- a/3-multiplay.yaml
+++ b/3-multiplay.yaml
@@ -1,6 +1,6 @@
 # This is my play-01
 - name: PLAY-01
-  hosts: ip-172-31-24-43.ec2.internal
+  hosts: frontend
   tasks:
   - name: PLAY-01 and TASK-01
     ansible.builtin.debug:   # mainly used to print messages, variables and structured data.
