--- a/3-multiplay.yaml
+++ b/3-multiplay.yaml
@@ -9,3 +9,16 @@
   - name: PLAY-01 and TASK-02
     ansible.builtin.debug:
       msg: "Hello from PLAY-01 and TASK-02"
+
+
+# This is my play-02
+- name: PLAY-01
+  hosts: ip-172-31-26-10.ec2.internal
+  tasks:
+  - name: PLAY-02 and TASK-01
+    ansible.builtin.debug:   # mainly used to print messages, variables and structured data.
+      msg: "Hello from PLAY-02 and TASK-01"
+
+  - name: PLAY-02 and TASK-02
+    ansible.builtin.debug:
+      msg: "Hello from PLAY-02 and TASK-02"
