--- a/4-variables.yaml
+++ b/4-variables.yaml
@@ -6,7 +6,12 @@
     DURATION: 10HRS
     Trainer: SivaKumar Reddy
 
+    Course: Terraform
+    Duration: 20HRS
+    Trainer: SivaKumar Reddy
+
   tasks:
   - name: Print the course info
     ansible.builtin.debug:
+      msg: "Your Course Name is::  {{ COURSE }}, Duration is:: {{ DURATION }}, Trainer is:: {{Trainer }}"
       msg: "Your Course Name is::  {{ COURSE }}, Duration is:: {{ DURATION }}, Trainer is:: {{Trainer }}"
