--- a/6-varfiles.yaml
+++ b/6-varfiles.yaml
@@ -4,6 +4,6 @@
   vars_files:
   - course.yaml
   tasks:
-  - name: print course details:
+  - name: print course details
     ansible.builtin.debug:
       msg: "Coure name is:: {{ Course }}, Duration is:: {{ Duration }}, Trainer is:: {{ Trainer }}"
