--- a/7-varprompt.yaml
+++ b/7-varprompt.yaml
@@ -1,10 +1,10 @@
 - name: This is for prompting values from user
-  hosts: 
+  hosts: ip-172-31-29-217.ec2.internal
 
   vars_prompt:
     - name: username
       prompt: What is your username?
-      private: false
+      rivate: false
   
   tasks:
     - name: Print username and password details
