--- a/7-varprompt.yaml
+++ b/7-varprompt.yaml
@@ -4,7 +4,7 @@
   vars_prompt:
     - name: username
       prompt: What is your username?
-      rivate: false
+      private: false
   
   tasks:
     - name: Print username and password details
