--- a/inventory.ini
+++ b/inventory.ini
@@ -1,14 +1,14 @@
 [ip-172-31-24-43.ec2.internal]
-172.31.24.43    #NODE PRIVATE IP ADDRESS
+172.31.24.43    # node - 1 PRIVATE IP ADDRESS
 
 
 [ip-172-31-26-10.ec2.internal]
-172.31.26.10
+172.31.26.10     # node-2 private IP Address
 
 
 [local]
-localhost
+localhost         # Ansible server itself
 
 
 [ip-172-31-29-217.ec2.internal]
-172.31.29.217
+172.31.29.217    # Ansible server itself
