--- a/inventory.ini
+++ b/inventory.ini
@@ -12,3 +12,9 @@ localhost         # Ansible server itself
 
 [ip-172-31-29-217.ec2.internal]
 172.31.29.217    # Ansible server itself
+
+
+[local:vars]    # Meaning for [local:vars] is [groupname:vars]
+course:Ansible
+duration:11hrs
+tariner:siva
