--- a/8-varsinventory.yaml
+++ b/8-varsinventory.yaml
@@ -1,9 +1,9 @@
 - name: variables from inventory file..
-  hosts: 
+  hosts: local
   connection: local
   
   tasks:
   - name: print course info
     ansible.builtin.debug:
       msg: "Course name is: {{ course }}, Duration is:: {{ duration }}, Trainer is:: {{ trainer }}"
-      
+
