--- a/inventory.ini
+++ b/inventory.ini
@@ -17,4 +17,4 @@ localhost         # Ansible server itself
 [local:vars]    # Meaning for [local:vars] is [groupname:vars]
 course=Ansible
 duration=11hrs
-tariner=siva
+trainer=siva
