--- a/inventory.ini
+++ b/inventory.ini
@@ -15,6 +15,6 @@ localhost         # Ansible server itself
 
 
 [local:vars]    # Meaning for [local:vars] is [groupname:vars]
-course=Ansible
-duration=11hrs
-trainer=siva
+course:Ansible
+duration:11hrs
+trainer:siva
