--- a/inventory.ini
+++ b/inventory.ini
@@ -14,7 +14,7 @@ localhost         # Ansible server itself
 172.31.29.217    # Ansible server itself
 
 
-[local:vars]    # Meaning for [local:vars] is [groupname:vars]
+[ip-172-31-24-43.ec2.internal:vars]    # Meaning for [local:vars] is [groupname:vars]
 course=Ansible
 duration=11hrs
 trainer=siva
