--- a/inventory.ini
+++ b/inventory.ini
@@ -15,6 +15,7 @@ localhost         # Ansible server itself
 
 
 [local:vars]    # Meaning for [local:vars] is [groupname:vars]
-course=Ansible
-duration=11hrs
-trainer=siva
+NAME=from inventory
+; course=Ansible
+; duration=11hrs
+; trainer=siva
