--- a/10-varpreference.yaml
+++ b/10-varpreference.yaml
@@ -2,23 +2,20 @@
   hosts: local
   connection: local
 
-  vars:            # variable level 
-    NAME:  from play level
+  vars:            # play level 
+    NAME: from play level
 
-  vars_files:       # variable file level by passing values to course.yaml file
-  - course.yaml
+  vars_files:       # variable file level
+    - course.yaml
 
-  vars_prompt:      # variables from keyboard/user
+  vars_prompt:      # variables from keyboard
     - name: NAME
       prompt: What is your name ?
       private: false     
 
-  
-  # List of tasks/collections/modules
-  tasks:                      # From task level
-  - name: testing variables preference
-    vars:
-      NAME:  from task level
-    
-    ansible.builtin.ping:
-      msg: "Name: {{ NAME }}"
+  tasks:                      # task level
+    - name: testing variables preference
+      vars:
+        NAME: from task level
+      ansible.builtin.debug:
+        msg: "Name: {{ NAME }}"
