--- a/15-loop.yaml
+++ b/15-loop.yaml
@@ -4,7 +4,7 @@
 
   tasks:
   - name: Print names
-    ansible.builtin.packages:
+    ansible.builtin.package:
       name: "package is:: {{ item }}"
       state: present 
     
