--- a/15-loop.yaml
+++ b/15-loop.yaml
@@ -5,7 +5,7 @@
   tasks:
   - name: Print names
     ansible.builtin.package:
-      name: "package is:: {{ item }}"
+      name: "{{ item }}"
       state: present 
     
     loop:
