--- a/19-dict.yaml
+++ b/19-dict.yaml
@@ -1,14 +1,13 @@
 - name: split function in ansible 
   hosts: local
   connection: local
-
-  tags:
-    Application: payment
-    Environment: dev
+  vars:
+    tags:
+      Application: payment
+      Environment: dev
 
   tasks:
-  - name: Convert string to list
+  - name: Convert map to list
     ansible.builtin.debug:
-      msg: "Techologies are:: {{ technologies | split(',') }}"
       msg: "Techologies are:: {{ technologies | dict2items }}"
 
