--- a/21-yaml2json.yaml
+++ b/21-yaml2json.yaml
@@ -9,13 +9,13 @@
   tasks:
   - name: Read yaml file and take into variable.
     ansible.builtin.set_fact:
-      student_yaml: "Techologies are:: {{ lookup('file' | 'student.yaml') | from_yaml }}"
+      student_yaml: "Techologies are:: {{ lookup('file' | 'f1.yaml') | from_yaml }}"
 
   - name: convert yaml into Json
     ansible.builtin.debug:
-      msg: "json: {{ f1_yaml | to_json }}"
+      msg: "json: {{ student_yaml | to_json }}"
 
   - name: save json to file.
     ansible.builtin.copy:
       dest: ./student.json
-      content: "{{ f1.yaml | to_nice_json }}"
+      content: "{{ student_yaml | to_nice_json }}"
