--- a/22-upper.yaml
+++ b/22-upper.yaml
@@ -3,8 +3,13 @@
   connection: local
   vars:
     name: "Sindhuja Muddana"
+    email: Info@GMAIL.COM
 
   tasks:
   - name: Convert to upper characters
     ansible.builtin.debug:
       msg: "{{ name | upper }}"
+
+  - name: Convert to upper characters
+    ansible.builtin.debug:
+      msg: "{{ name | lower }}"
