--- a/23-ipaddress.yaml
+++ b/23-ipaddress.yaml
@@ -2,9 +2,9 @@
   hosts: local
   connection: local
   vars:
-    ip_address: "192.45.96"
+    ipaddress: "192.45.96"
 
   tasks:
   - name: Check whether IP address is valid or not
     ansible.builtin.debug:
-      msg: "{{ ip_address | ansible.utils.ipv4 }}"
+      msg: "{{ ipaddress | ansible.utils.ipv4 }}"
