--- a/24-output.yaml
+++ b/24-output.yaml
@@ -6,7 +6,7 @@
 
   tasks:
   - name: grep for root
-    ansible.builtin.command: cat /etc/passwd | grep root
+    ansible.builtin.shell: cat /etc/passwd | grep root
     register: command_output
 
   - name: print the command_output
