--- a/inventory.ini
+++ b/inventory.ini
@@ -7,7 +7,7 @@
 
 
 [local]
-172.31.23.245        # Ansible server itself
+local        # Ansible server itself
 
 
 [ip-172-31-29-217.ec2.internal]
