--- a/inventory.ini
+++ b/inventory.ini
@@ -7,7 +7,7 @@
 
 
 [local]
-localhost        # Ansible server itself
+172.31.28.137      # Ansible server itself
 
 
 [ip-172-31-29-217.ec2.internal]
