--- a/24-output.yaml
+++ b/24-output.yaml
@@ -4,7 +4,7 @@
 
   tasks:
   - name: grep for root
-    ansible.builtin.command: cat /etc/passwd | grep root
+    ansible.builtin.shell: cat /etc/passwd | grep root
     register: result
 
   - name: print the output
